--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>koddas.web.war</param-value> <!-- Set this value to whatever you name your own root package to -->
+            <param-value>booktheturf.web.war</param-value> <!-- Set this value to whatever you name your own root package to -->
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
