--- a/.smarttomcat/wwp/conf/web.xml
+++ b/.smarttomcat/wwp/conf/web.xml
@@ -3816,7 +3816,7 @@
     </mime-mapping>
     <mime-mapping>
         <extension>svc</extension>
-        <mime-type>application/vnd.dvb.service</mime-type>
+        <mime-type>application/vnd.dvb.booktheturf.web.war.service</mime-type>
     </mime-mapping>
     <mime-mapping>
         <extension>svd</extension>
