--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
      see implementation details http://jersey.java.net/nonav/documentation/latest/jax-rs.html -->
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <servlet>
-        <servlet-name>War Web service</servlet-name>
+        <servlet-name>War Web booktheturf.web.war.service</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
@@ -12,7 +12,7 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>War Web service</servlet-name> <!-- Set this to whatever you'd like your service to be called -->
+        <servlet-name>War Web booktheturf.web.war.service</servlet-name> <!-- Set this to whatever you'd like your booktheturf.web.war.service to be called -->
         <url-pattern>/webapi/*</url-pattern> <!-- Not happy with the /webapi/ infix? Change it here -->
     </servlet-mapping>
 </web-app>
