--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
       <artifactId>slf4j-api</artifactId>
       <version>2.0.12</version>
     </dependency>
+    <dependency>
+      <groupId>org.mindrot</groupId>
+      <artifactId>jbcrypt</artifactId>
+      <version>0.4</version> <!-- Check for latest version -->
+    </dependency>
   </dependencies>
   
   <build>
