--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,12 @@
     <dependency>
       <groupId>org.mindrot</groupId>
       <artifactId>jbcrypt</artifactId>
-      <version>0.4</version> <!-- Check for latest version -->
+      <version>0.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <version>2.15.2</version>
     </dependency>
   </dependencies>
   
